#298 Expand java demo